--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "aos": "^2.3.4",
     "bootstrap": "^4.6.0",
     "next": "^10.0.9",
@@ -20,5 +21,9 @@
     "react-slick": "^0.28.1",
     "sass": "^1.32.8",
     "slick-carousel": "^1.8.1"
+  },
+  "devDependencies": {
+    "node-sass": "^5.0.0",
+    "styled-jsx-plugin-sass": "^1.0.0"
   }
 }
