:sparkles: Invest Form

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "aos": "^2.3.4",
     "bootstrap": "^4.6.0",
+    "cookie-universal": "^2.1.4",
     "next": "^10.0.9",
+    "nprogress": "^0.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-slick": "^0.28.1",
