--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,6 +9,24 @@
   "start_url": "/",
   "icons": [
     {
+      "src": "/images/icon-48.png",
+      "sizes": "48x48",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/images/icon-72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/images/icon-144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
       "src": "/images/icon.png",
       "sizes": "512x512",
       "type": "image/png",
